# id-tree-layout

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: example1.rs  example2.rs  layouter.rs  parse_tree.json
src/: drawer.rs  embedder.rs  layouter.rs  layouter_error.rs  lib.rs  svg_drawer.rs  visualize.rs
tests/: embedder_tests.rs
