[package]
name = "id_tree_layout"
version = "2.0.3"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
description = "A library to visualize trees from the 'id_tree' crate."
documentation = "https://docs.rs/id_tree_layout"
repository = "https://github.com/jsinger67/id-tree-layout"
readme = "README.md"
keywords = ["id_tree", "layout", "visualization", "embedding"]
categories = ["algorithms"]
license = "MIT"
edition = "2018"

[features]
default = ["serde_support"]

serde_support = ["serde", "serde_derive", "serde_json", "id_tree/serde_support"]

[dependencies]
id_tree = "^1.8"
xml_writer = "0.4.0"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
